--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ rayon = "1.3.0"
 structopt = "0.3.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+ctrlc = { version = "3.0" }
