--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ structopt = "0.3.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ctrlc = { version = "3.0" }
+bit-vec = { version = "0.6", features = ["serde"] }
