--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+failure = "0.1"
 rayon = "1.3.0"
 structopt = "0.3.9"
 serde = { version = "1.0", features = ["derive"] }
